--- a/style.css
+++ b/style.css
@@ -43,12 +43,6 @@ header a {
   display: inline-block;
 }
 
-a {
-  color: #FFF;
-  text-decoration: none;
-  display: inline-block;
-}
-
 a:hover {
   color: #ffff00;
 }
@@ -76,11 +70,19 @@ a:hover {
 }
 
 .welcome strong {
-  color: yellow
+  color: yellow;
 }
 
 .welcome .spacer {
   height: 100px;
+}
+
+.welcome i {
+  color: white;
+}
+
+.welcome i:hover {
+  color: yellow;
 }
 
 /* Welcome div end */
@@ -88,7 +90,7 @@ a:hover {
 /* about-me div */
 
 .about-me ul {
-  padding: 30px 0px;
+  padding: 75px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -121,15 +123,48 @@ a:hover {
 
 /* about-me div end */
 
+
 /* projects div */
 
 .projects {
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin: 75px 0px;
 }
 
-.projects .box {
+.projects ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.projects li {
+  padding: 0px 40px;
+  display: inline-block;
+
+}
+
+.projects p {
+}
+
+.projects img {
+  width: 500px;
+  height: 230px;
+  box-shadow: rgba(89, 67, 203, 1)  -10px 10px;
+}
+/* projects div end */
+
+
+/* contact div */
+
+.contact {
+  text-align: center;
+  padding-bottom: 75px;
+}
+
+.contact .box {
   width: 200px;
-  height: 400px;
+  height: 350px;
   display:inline-block;
   border-radius: 10px;
   margin: 16px 30px;
@@ -139,14 +174,14 @@ a:hover {
   text-align: center;
 }
 
-.projects .img_circle {
+.contact .img_circle {
   padding-top: 10px;
   width: 100px;
   height: 100px;
   display: inline-block;
 }
 
-.projects img {
+.contact img {
   position: relative;
   border-radius: 10%;
   max-width: 100%;
@@ -154,11 +189,11 @@ a:hover {
   height: 100px;
 }
 
-.projects img:hover {
+.contact img:hover {
   transform: scale(1.01);
 }
 
-.projects p {
+.contact p {
   font-size: 16px;
   text-overflow: clip;
   padding-bottom: 20px;
@@ -166,14 +201,22 @@ a:hover {
   padding-right: 2px;
 }
 
-.projects #box1{
+.contact #box1{
 }
 
-.projects #box2{
+.contact #box2{
 }
 
+.contact #box3 {
 
-/* projects div end */
+}
+
+.contact a {
+  text-decoration: none;
+  color: #5943cb;
+}
+
+/* contact div end */
 
 h2 {
   color: #333;
@@ -201,6 +244,14 @@ h4 {
   letter-spacing: 2px;
   text-align: center;
   text-transform: uppercase
+}
+
+h6 {
+  color: #466995;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 10px;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
 
 p {
