--- a/style.css
+++ b/style.css
@@ -154,6 +154,10 @@ a:hover {
   height: 230px;
   box-shadow: rgba(89, 67, 203, 1)  -10px 10px;
 }
+
+.projects h6 {
+  color: black;
+}
 /* projects div end */
 
 
