--- a/style.css
+++ b/style.css
@@ -81,6 +81,13 @@ a:hover {
 }
 
 .welcome i:hover {
+}
+
+.welcome a {
+  text-decoration: none;
+}
+
+.welcome a:hover {
   color: yellow;
 }
 
@@ -272,4 +279,16 @@ footer {
   background-color: #101029;
   text-align: center;
   height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: rotate(180deg);
+}
+
+footer a {
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: yellow;
 }
