--- a/style.css
+++ b/style.css
@@ -134,14 +134,14 @@ a:hover {
 .projects {
   width: 100%;
   height: 100%;
-  margin: 75px 0px;
+  padding-bottom: 75px;
+  margin-bottom: 16px;
 }
 
 .projects ul {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 75px 0px;
 }
 
 .projects li {
