--- a/style.css
+++ b/style.css
@@ -1,294 +1,66 @@
-body {
-  background-color: #FFF;
-  margin: 0 auto;
+* {
+  margin: 0;
+  height: 100%;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
-.content {
-  top: 80px
-}
-
-/* Nav bar */
+/** nav bar header **/
 
 header {
-  background-color: #5943cb;
+  height: 100px;
   position: fixed;
+  background-color: #F3DAD8;
   width: 100%;
-  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+}
+
+header img {
+  width: 75px;
+  height: 75px;
+}
+
+#homepage-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 50px;
+}
+
+#homepage-left:hover{
+  transform: scale(1.02);
 }
 
 header ul {
-  margin: 30px auto;
-  padding: 0 20px;
-  text-align: center;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  list-style-type:none;
 }
 
 header li {
-  color: #FFF;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 300;
-  text-transform: uppercase;
-  display: inline-block;
-  width: 100px;
-  letter-spacing: 3px;
-}
-
-header a {
-  color: #FFF;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:hover {
-  color: #ffff00;
-}
-
-/* Nav bar end */
-
-/* Welcome div */
-
-.welcome {
-  background-color: #5943cb;
-  text-align: center;
-  height: 800px;
-  position: relative;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.welcome h1 {
-  color: white;
-  font-family: 'Patua One', sans-serif;
-  letter-spacing: 2px;
-  font-size: 50px;
-}
-
-.welcome strong {
-  color: yellow;
-}
-
-.welcome .spacer {
-  height: 100px;
-}
-
-.welcome i {
-  color: white;
-}
-
-.welcome i:hover {
-}
-
-.welcome a {
-  text-decoration: none;
-}
-
-.welcome a:hover {
-  color: yellow;
-}
-
-/* Welcome div end */
-
-/* about-me div */
-
-.about-me ul {
-  padding: 75px 0px;
+  color: #E887AB;
+  padding: 0 50px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 100%;
 }
 
-.about-me li {
-  color: #FFF;
-  font-family: 'Oswald', sans-serif;
-  font-weight: 300;
-  width: 500px;
-  position: relative;
-  display: block;
-  text-align: center;
+header li:hover{
+  color: #9A1D4B
 }
 
-.about-me a {
+/** nav bar header END **/
+
+#main-left {
 
 }
 
-.about-me img {
-  width: 70%;
-  height: 70%;
+#main-right {
+
 }
 
-.about-me img:hover {
-  transform: scale(1.01);
-}
-
-/* about-me div end */
-
-
-/* projects div */
-
-.projects {
-  width: 100%;
+.homepage-main {
+  background-color: #F3DAD8;
+  padding-top: 100px;
   height: 100%;
-  padding-bottom: 75px;
-  margin-bottom: 16px;
-}
-
-.projects ul {
   display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.projects li {
-  padding: 0px 40px;
-  width: 500px;
-  display: inline-block;
-
-}
-
-.projects p {
-}
-
-.projects img {
-  width: 500px;
-  height: 230px;
-  box-shadow: rgba(89, 67, 203, 1)  -10px 10px;
-}
-
-.projects h6 {
-  color: black;
-}
-
-.projects img:hover {
-  transform: scale(1.01);
-}
-
-/* projects div end */
-
-
-/* contact div */
-
-.contact {
-  text-align: center;
-  padding-bottom: 75px;
-}
-
-.contact .box {
-  width: 200px;
-  height: 350px;
-  display:inline-block;
-  border-radius: 10px;
-  margin: 16px 30px;
-  background-color: #eeeeee;
-  vertical-align: top;
-  padding: 10px 10px;
-  text-align: center;
-}
-
-.contact .img_circle {
-  padding-top: 10px;
-  width: 100px;
-  height: 100px;
-  display: inline-block;
-}
-
-.contact img {
-  position: relative;
-  border-radius: 10%;
-  max-width: 100%;
-  max-height: 100%;
-  height: 100px;
-}
-
-.contact img:hover {
-  transform: scale(1.01);
-}
-
-.contact p {
-  text-overflow: clip;
-  padding-bottom: 20px;
-  padding-left: 2px;
-  padding-right: 2px;
-}
-
-.contact #box1{
-}
-
-.contact #box2{
-}
-
-.contact #box3 {
-
-}
-
-.contact a {
-  text-decoration: none;
-  color: #5943cb;
-}
-
-/* contact div end */
-
-h2 {
-  color: #333;
-  font-family: 'Varela Round', sans-serif;
-  font-size: 26px;
-  font-weight: 100;
-  margin: 0 auto 20px auto;
-}
-
-h3 {
-  color: #466995;
-  font-family: 'Oswald', sans-serif;
-  font-size: 18px;
-  text-align: center;
-  font-weight: 700;
-  text-transform: uppercase;
-  padding: 30px;
-}
-
-h4 {
-  color: #466995;
-  font-family: 'Oswald', sans-serif;
-  font-size: 18px;
-  font-weight: 300;
-  letter-spacing: 2px;
-  text-align: center;
-  text-transform: uppercase
-}
-
-h6 {
-  color: #466995;
-  font-family: 'Varela Round', sans-serif;
-  font-size: 10px;
-  font-weight: bold;
-  letter-spacing: 2px;
-}
-
-p {
-  color: #333;
-  font-family: 'Varela Round', sans-serif;
-  font-size: 18px;
-}
-
-footer {
-  background-color: #101029;
-  text-align: center;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transform: rotate(180deg);
-}
-
-footer a {
-  text-decoration: none;
-}
-
-footer a:hover {
-  color: yellow;
 }
