--- a/bootstrap/styles.css
+++ b/bootstrap/styles.css
@@ -3,10 +3,14 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .navbar-inverse {
   background-color: none;
   background: rgba(76, 175, 80, 0);
-  z-index: 1;
+  z-index: 2;
   border: none;
   margin-bottom: 0 !important;
   position: absolute;
@@ -28,7 +32,7 @@ body, html {
 }
 
 #landing_container {
-  height: 75% !important;
+  height: 100% !important;
   padding: 0 !important;
   margin: 0 !important;
 }
@@ -81,9 +85,10 @@ body, html {
 }
 
 #about_container {
-  background-color: #fee;
+  background-color: red;
   height: 900px;
   position: relative;
+
 }
 
 @media (max-width:768px){
@@ -140,6 +145,7 @@ body, html {
 
 @media (max-width: 800px) {
   #landing_page_div {
+    z-index: 1;
     letter-spacing: 20px;
     background: rgb(2,0,36);
     background: linear-gradient(49deg, rgba(2,0,36,1) 0%, rgba(106,76,80,0.9906556372549019) 78%);
@@ -148,10 +154,40 @@ body, html {
 
 @media (min-width: 800px) {
   #landing_page_div {
+    z-index: 1;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url('space.jpg');
     background-color: rgb(2,0,36)
     }
+}
+
+@media (max-width: 800px) {
+  #landing_page_div img{
+    display: none;
+  }
+}
+
+
+@media (min-width: 800px) {
+  #landing_page_div a{
+    z-index: 1;
+  }
+
+  #landing_page_div img{
+    width: 50px;
+    height: 50px;
+  }
+
+  #landing_page_div a:hover{
+    transform: scale(1.2)!important;
+  }
+}
+
+
+@media (max-width: 800px) {
+  #landing_container{
+    height: 80%!important;
+  }
 }
