--- a/bootstrap/about_styles.css
+++ b/bootstrap/about_styles.css
@@ -41,7 +41,7 @@ body, html {
   color: #ffd1dc;
   opacity: 0.8;
   display: inline-block;
-  color: black; background: #fee; line-height: 74px; font-weight: 700;  padding: 10px; margin: 0 5px 24px; font-family: 'Libre Baskerville', serif;
+  color: black; background: #fee; line-height: 74px; font-weight: 700;  padding: 10px; margin: 0 5px 24px; 
 }
 
 .spacer {
