--- a/bootstrap/about_styles.css
+++ b/bootstrap/about_styles.css
@@ -12,17 +12,16 @@ body, html {
 }
 
 #landing_container {
-  padding-top: 100px !important;
+  padding-top: 50px !important;
   padding-bottom: 100px !important;
   margin: 0 !important;
-  background-color: #5E4352;
+  background-color: #fee;
 }
 
 #landing_page_div {
   width: 100%;
   height: 100%;
   letter-spacing: 20px;
-  color: white;
   text-align: center;
   display: flex;
   align-items: center;
@@ -38,14 +37,51 @@ body, html {
   text-transform: uppercase;
   font-weight: bold;
   z-index: 0;
-  color: #ffd1dc;
   opacity: 0.8;
   display: inline-block;
-  color: black; background: #fee; line-height: 74px; font-weight: 700;  padding: 10px; margin: 0 5px 24px; 
+  color: black;
+  line-height: 74px;
+  font-weight: 700;
 }
 
+#divider_container {
+  width: 100%;
+  position: absolute;
+}
+
+#divider {
+  width: 100%;
+  height: 20px;
+  background-color: #fee;
+}
+
+#landing_cards_container {
+  text-align: center;
+}
+
+#card_text {
+  background-color: #fec9c9;
+  color: #390000;
+  box-shadow: white 0px 0px 0px 3px, #7a0000 0px 0px 0px 9px;
+  padding: 10px;
+
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: black;
+  line-height: 74px;
+  font-weight: 700;
+}
+
+#landing_cards {
+  text-align: center;
+}
+
+
+
 .spacer {
-  background: linear-gradient(to bottom right, #5E4352 50%, #fee 0);
+  background: linear-gradient(to bottom right, #fee 50%, white 0);
+  border-radius: 2px;
   width: 100%;
   height: 100px;
 }
