--- a/bootstrap/about_styles.css
+++ b/bootstrap/about_styles.css
@@ -51,7 +51,7 @@ body, html {
 
 #divider {
   width: 100%;
-  height: 20px;
+  height: 50px;
   background-color: #fee;
 }
 
@@ -64,17 +64,45 @@ body, html {
   color: #390000;
   box-shadow: white 0px 0px 0px 3px, #7a0000 0px 0px 0px 9px;
   padding: 10px;
-
   letter-spacing: 10px;
   text-transform: uppercase;
   font-weight: bold;
   color: black;
-  line-height: 74px;
   font-weight: 700;
+}
+
+#card_text h4{
+  line-height: 1.5;
 }
 
 #landing_cards {
   text-align: center;
+}
+
+#landing_cards .card {
+  background-color: white!important;
+  border-radius: 5px;
+  border-color: black!important;
+  border-style: solid;
+  padding: 20px;
+  margin: 20px;
+}
+
+#landing_cards .btn-primary {
+  background-color: white;
+  border-color: black;
+  border-radius: 0px;
+  color: black!important;
+}
+
+#landing_cards .btn-primary:hover {
+  transform: scale(1.09);
+  box-shadow: black -3px 3px;
+  text-decoration: none!important;
+}
+
+#landing_cards h4 {
+  text-transform: uppercase;
 }
 
 
@@ -142,12 +170,18 @@ body, html {
 #homepage_cards_border h5:hover{
   transform: scale(1.09);
   box-shadow: black -5px 5px;
+  text-decoration: none!important;
+}
+
+#service_button a{
+  text-decoration: none;
 }
 
 #service_button {
   display: flex;
   justify-content: center;
 }
+
 
 footer {
   height: 100px;
