--- a/bootstrap/about_styles.css
+++ b/bootstrap/about_styles.css
@@ -47,12 +47,38 @@ body, html {
 #divider_container {
   width: 100%;
   position: absolute;
+  z-index: -1;
 }
 
 #divider {
   width: 100%;
   height: 50px;
   background-color: #fee;
+}
+
+#values_section_img {
+  height: 200px;
+}
+
+
+#values_section {
+  margin-top: 100px;
+  position: relative;
+  background: linear-gradient(to bottom, white 50%, #fee 0%);
+}
+
+#minister_section {
+  background: linear-gradient(to bottom, #fee 100%, white 0%);
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: center;
+}
+
+#minister_section img {
+  height: 150px;
+  width: 150px;
+  margin-bottom: 25px;
+  border-radius: 50%;
 }
 
 #landing_cards_container {
@@ -93,6 +119,7 @@ body, html {
   border-color: black;
   border-radius: 0px;
   color: black!important;
+  text-transform: uppercase;
 }
 
 #landing_cards .btn-primary:hover {
@@ -105,6 +132,10 @@ body, html {
   text-transform: uppercase;
 }
 
+.card-img {
+  width: 100%;
+  height: 100%;
+}
 
 
 .spacer {
@@ -251,5 +282,11 @@ footer p {
 @media (min-width: 900px) {
   #music_border{
     width: 75%;
+  }
+}
+
+@media (max-width: 700px) {
+  #values_section_img {
+    display: none;
   }
 }
