--- a/bootstrap/about_styles.css
+++ b/bootstrap/about_styles.css
@@ -165,8 +165,6 @@ body, html {
 
 
 #music_border{
-  margin: 5%;
-  padding: 2%;
   height: 100%;
 }
 
@@ -179,7 +177,7 @@ body, html {
 }
 
 #homepage_cards {
-  background-color: #fee;
+  background: linear-gradient(to bottom, white 50%, #fee 50%)!important;
 }
 
 #homepage_cards_border {
@@ -206,6 +204,10 @@ body, html {
 
 #service_button a{
   text-decoration: none;
+}
+
+#service_button h5{
+  background-color: white;
 }
 
 #service_button {
@@ -286,7 +288,20 @@ footer p {
 }
 
 @media (max-width: 700px) {
+  #values_section {
+    background: linear-gradient(to bottom, white 0%, #fee 0%)!important;
+    padding-top: 50px;
+  }
+}
+
+@media (max-width: 700px) {
   #values_section_img {
     display: none;
   }
 }
+
+@media (max-width: 700px) {
+#music {
+  text-align: center;
+  background: linear-gradient(to bottom, #fee 0%, white 0%)!important;
+}}
