--- a/bootstrap/styles.css
+++ b/bootstrap/styles.css
@@ -206,7 +206,7 @@ footer p {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url('space.jpg');
+    background-image: url('images/space.jpg');
     background-color: rgb(2,0,36)
     }
 }
