--- a/bootstrap/about_styles.css
+++ b/bootstrap/about_styles.css
@@ -68,7 +68,7 @@ body, html {
 }
 
 #minister_section {
-  background: linear-gradient(to bottom, #fee 100%, white 0%);
+  background: linear-gradient(to bottom, #fee 50%, white 50%);
   padding-top: 100px;
   padding-bottom: 100px;
   text-align: center;
@@ -107,7 +107,7 @@ body, html {
 
 #landing_cards .card {
   background-color: white!important;
-  border-radius: 5px;
+  border-radius: 0px;
   border-color: black!important;
   border-style: solid;
   padding: 20px;
@@ -120,6 +120,7 @@ body, html {
   border-radius: 0px;
   color: black!important;
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 #landing_cards .btn-primary:hover {
@@ -302,6 +303,15 @@ footer p {
 
 @media (max-width: 700px) {
 #music {
-  text-align: center;
   background: linear-gradient(to bottom, #fee 0%, white 0%)!important;
+}}
+
+@media (max-width: 700px) {
+#minister_section {
+  background: linear-gradient(to bottom, white 0%, #fee 0%)!important;
+}}
+
+@media (max-width: 700px) {
+#homepage_cards {
+  background: linear-gradient(to bottom, white 0%, #fee 0%)!important;
 }}
