--- a/bootstrap/styles/event_styles.css
+++ b/bootstrap/styles/event_styles.css
@@ -66,15 +66,47 @@ body, html {
 #intro_div {
   width: 100%;
   height: 100%;
-  text-align: center;
-  display: flex;
-  align-items: center;
+  text-align: center!important;
   position: relative;
+}
+
+
+h5{
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 5%;
+  color: black;
+  border-radius: 2px;
+  border-color: black;
+  border-style: solid;
+}
+
+#button:hover{
+  transform: scale(1.09);
+  box-shadow: black -5px 5px;
+  text-decoration: none!important;
+}
+
+#button_link{
+  text-decoration: none!important;
+}
+
+#button_link:hover{
+  text-decoration: none!important;
+}
+
+#button{
+  background-color: white;
 }
 
 #cal_container {
   padding-bottom: 100px !important;
   background: linear-gradient(to bottom, white 50%, #fee 0%);
+}
+
+#video_frame {
+  width: 1000px;
+  height: 500px;
 }
 
 #cal_div {
@@ -171,4 +203,16 @@ footer p {
 #iframe {
   width: 300px;
   height: 300px;
+}}
+
+@media (max-width: 480px) {
+#video_frame {
+  width: 300px;
+  height: 150px;
+}}
+
+@media (min-width: 480px) and (max-width: 1000px) {
+#video_frame {
+  width: 500px;
+  height: 250px;
 }}
